--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/redis": "^2.8.7",
     "@types/rimraf": "2.0.2",
     "@types/run-sequence": "^0.0.30",
+    "@types/sequelize": "^4.27.28",
     "@types/systemjs": "^0.20.6",
     "@types/through2": "^2.0.34",
     "@types/yargs": "12.0.2",
@@ -156,12 +157,18 @@
     "compression": "^1.7.3",
     "core-js": "2.6.5",
     "express": "~4.16.3",
+    "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
+    "mysql2": "^1.6.4",
     "nodemon": "1.18.10",
     "pm2": "^3.2.2",
     "redis": "^2.8.0",
     "rxjs": "^6.2.2",
+    "sequelize": "^4.42.0",
+    "sequelize-auto": "^0.4.29",
+    "sequelize-auto-import": "^1.1.0",
     "systemjs": "0.21.5",
+    "tedious": "^2.7.1",
     "zone.js": "~0.8.26"
   }
 }
