Now the model works so that the server will run

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,7 @@ notifications:
   email: true
 
 cache:
-  directories:
-    - "$HOME/.npm"
+  directories: node_modules
 
 script:
 #  - npm run tests.all
