--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-seed-express",
-  "version": "7.2.0",
+  "version": "6.0.1",
   "description": "Modular starter project for Angular 2 (and beyond) with statically typed build and AoT compilation with Express",
   "repository": {
     "type": "git",
@@ -10,12 +10,15 @@
     "build.tools": "tsc && gulp build.tools --color",
     "build.dev": "gulp build.dev --color --env-config dev",
     "build.dev.watch": "gulp build.dev.watch --color",
-    "build.prod": "gulp build.prod.rollup.aot --color --env-config prod --build-type prod",
+    "build.prod": "gulp build.prod --color --env-config prod --build-type prod",
+    "build.prod.exp": "gulp build.prod.aot --color --env-config prod --build-type prod",
+    "build.prod.rollup.aot": "gulp build.prod.rollup.aot --color --env-config prod --build-type prod",
+    "build.prod.aot": "gulp build.prod.aot --color --env-config prod --build-type prod",
     "build.test": "gulp build.test --color",
     "test.watch": "gulp test.watch --color",
     "generate.manifest": "gulp generate.manifest --color",
-    "e2e": "npm run build.prod && node app.server.prod.js & cypress run",
-    "e2e.live": "npm run build.prod && node app.server.prod.js & cypress open",
+    "e2e": "cypress run",
+    "e2e.live": "cypress open",
     "gulp": "gulp",
     "nodemon": "./node_modules/.bin/nodemon",
     "pm2": "./node_modules/.bin/pm2",
@@ -27,147 +30,151 @@
     "reinstall": "npm cache clean && npm install",
     "serve.coverage": "gulp serve.coverage --color",
     "serve.dev": "gulp serve.dev --color --env-config dev",
-    "serve.prod": "gulp serve.prod.rollup.aot --color --env-config prod --build-type prod",
-    "sme.prod": "gulp sme.prod.rollup.aot --color --env-config prod --build-type prod --preserve-source-maps",
-    "start": "gulp serve.dev --color & nodemon app.server.dev.js",
+    "serve.prod": "gulp serve.prod --color --env-config prod --build-type prod",
+    "serve.prod.aot": "gulp serve.prod.aot --color --env-config prod --build-type prod",
+    "serve.prod.exp": "gulp serve.prod.aot --color --env-config prod --build-type prod",
+    "serve.prod.rollup.aot": "gulp serve.prod.rollup.aot --color --env-config prod --build-type prod",
+    "sme.prod": "gulp sme.prod --color --env-config prod --build-type prod --preserve-source-maps",
+    "sme.prod.aot": "gulp sme.prod.aot --color --env-config prod --build-type prod --preserve-source-maps",
+    "sme.prod.rollup.aot": "gulp sme.prod.rollup.aot --color --env-config prod --build-type prod --preserve-source-maps",
+    "start": "gulp serve.dev --color && nodemon app.server.dev.js",
     "start.deving": "gulp start.deving --color",
     "tasks.list": "gulp --tasks-simple --color",
     "test": "gulp test --color",
-    "e2e.ci": "npm run build.prod && gulp e2e --color",
+    "e2e.ci": "gulp build.prod.rollup.aot --color && gulp e2e --color",
     "tests.all": "npm test && npm run e2e.ci",
     "compodoc": "./node_modules/.bin/compodoc -p src/client/tsconfig.json",
     "serve.compodoc": "./node_modules/.bin/compodoc -s"
   },
-  "author": "Valentyn Yakymenko <vyakymenko>",
+  "author": "Minko Gechev <mgechev>",
+  "contributors": [
+    {
+      "name": "Valentyn Yakymenko <vyakymenko>"
+    }
+  ],
   "license": "MIT",
   "engines": {
     "node": ">=6.9.0",
     "npm": ">=3.10.3"
   },
-  "optionalDependencies": {
-    "@bahmutov/add-typescript-to-cypress": "^2.0.0",
-    "@types/jasmine": "^3.0.0",
-    "cypress": "^3.1.0",
-    "jasmine-core": "^3.1.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-remap-istanbul": "^0.6.0"
-  },
   "devDependencies": {
-    "@angular/compiler-cli": "7.2.0",
-    "@angular/language-service": "7.2.0",
-    "@angular/platform-server": "7.2.0",
-    "@compodoc/compodoc": "^1.1.1",
-    "@types/async": "^2.0.48",
-    "@types/body-parser": "^1.17.0",
-    "@types/browser-sync": "^0.0.42",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@bahmutov/add-typescript-to-cypress": "^2.0.0",
+    "@compodoc/compodoc": "^1.1.9",
+    "@types/async": "^2.0.50",
+    "@types/body-parser": "^1.16.7",
+    "@types/browser-sync": "^0.0.40",
     "@types/compression": "0.0.36",
     "@types/express": "^4.11.1",
     "@types/gulp": "^4.0.5",
-    "@types/gulp-filter": "^3.0.32",
+    "@types/gulp-filter": "^3.0.33",
     "@types/gulp-htmlmin": "^1.3.32",
     "@types/gulp-load-plugins": "^0.0.31",
     "@types/gulp-sass": "^0.0.31",
-    "@types/node": "^11.9.0",
-    "@types/redis": "^2.8.7",
+    "@types/gulp-util": "^3.0.34",
+    "@types/jasmine": "^2.8.14",
+    "@types/node": "^9.6.35",
     "@types/rimraf": "2.0.2",
     "@types/run-sequence": "^0.0.30",
     "@types/sequelize": "^4.27.28",
     "@types/systemjs": "^0.20.6",
-    "@types/through2": "^2.0.34",
-    "@types/yargs": "12.0.2",
-    "ansi-colors": "^3.0.6",
-    "async": "^2.6.1",
-    "autoprefixer": "^9.1.1",
-    "browser-sync": "^2.24.6",
-    "browserslist": "^4.0.2",
-    "codelyzer": "^4.4.4",
+    "@types/yargs": "^11.1.2",
+    "async": "^2.6.0",
+    "autoprefixer": "^8.6.5",
+    "browser-sync": "^2.26.3",
+    "codelyzer": "^4.5.0",
     "connect-history-api-fallback": "^1.5.0",
-    "cssnano": "4.1.10",
+    "cssnano": "^3.10.0",
+    "cypress": "^3.1.4",
     "deep-extend": "^0.6.0",
-    "event-stream": "^4.0.0",
+    "event-stream": "^3.3.5",
     "express-history-api-fallback": "^2.2.1",
-    "fancy-log": "^1.3.2",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-filter": "^5.1.0",
-    "gulp-htmlmin": "^5.0.0",
-    "gulp-inject": "^5.0.0",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-inject": "^4.3.2",
+    "gulp-inline-ng2-template": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-plumber": "~1.2.0",
-    "gulp-postcss": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^7.0.1",
     "gulp-progeny": "^0.4.1",
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "2.6.5",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "2.6.4",
     "gulp-template": "^5.0.0",
-    "gulp-tslint": "^8.1.3",
+    "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.1",
+    "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
-    "is-ci": "^2.0.0",
+    "is-ci": "^1.2.1",
     "isstream": "^0.1.2",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-istanbul": "^0.6.0",
     "merge-stream": "^1.0.1",
     "minimatch": "^3.0.4",
-    "node-sass-magic-importer": "^5.2.0",
     "open": "0.0.5",
-    "remap-istanbul": "^0.13.0",
-    "rimraf": "^2.6.2",
-    "rollup": "~1.2.0",
-    "rollup-plugin-commonjs": "^9.1.5",
-    "rollup-plugin-includepaths": "0.2.3",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "remap-istanbul": "^0.11.0",
+    "rimraf": "^2.6.3",
+    "rollup": "^0.60.7",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-includepaths": "0.2.2",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "run-sequence": "^2.2.1",
-    "semver": "^5.5.0",
-    "serve-static": "^1.13.2",
+    "semver": "^5.6.0",
+    "serve-static": "^1.13.1",
     "slash": "~2.0.0",
     "source-map-explorer": "^1.6.0",
-    "supports-color": "^6.0.0",
-    "systemjs-builder": "0.16.13",
-    "temp": "^0.9.0",
-    "through2": "^3.0.0",
+    "supports-color": "^5.5.0",
+    "systemjs-builder": "^0.16.13",
+    "temp": "^0.8.3",
     "tildify": "^1.2.0",
     "traceur": "^0.0.111",
-    "ts-node": "^6.0.0",
-    "tslint": "^5.11.0",
-    "typescript": "3.1.x",
+    "ts-node": "^6.2.0",
+    "tslint": "^5.12.0",
+    "typescript": "2.8.1",
     "walk": "^2.3.14",
-    "yargs": "^13.1.0"
+    "yargs": "^11.1.0"
   },
   "dependencies": {
-    "@angular-devkit/build-optimizer": "^0.13.1",
-    "@angular/animations": "7.2.0",
-    "@angular/common": "7.2.0",
-    "@angular/compiler": "7.2.0",
-    "@angular/core": "7.2.0",
-    "@angular/forms": "7.2.0",
-    "@angular/platform-browser": "7.2.0",
-    "@angular/platform-browser-dynamic": "7.2.0",
-    "@angular/router": "7.2.0",
-    "@angular/service-worker": "7.2.0",
-    "body-parser": "^1.18.3",
+    "@angular-devkit/build-optimizer": "^0.6.2",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "@angular/service-worker": "^6.1.10",
+    "@types/redis": "^2.8.10",
+    "body-parser": "^1.18.2",
     "compression": "^1.7.3",
-    "core-js": "2.6.5",
-    "express": "~4.16.3",
-    "font-awesome": "^4.7.0",
+    "core-js": "^2.6.1",
+    "express": "^4.16.4",
     "intl": "^1.2.5",
     "mysql2": "^1.6.4",
-    "nodemon": "1.18.10",
-    "pm2": "^3.2.2",
+    "nodemon": "^1.18.9",
+    "pm2": "^2.10.4",
     "redis": "^2.8.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
     "sequelize": "^4.42.0",
     "sequelize-auto": "^0.4.29",
     "sequelize-auto-import": "^1.1.0",
-    "systemjs": "0.21.5",
+    "systemjs": "0.21.4",
     "tedious": "^2.7.1",
     "zone.js": "~0.8.26"
   }
